--- a/Output/appmanifest.json
+++ b/Output/appmanifest.json
@@ -3,7 +3,7 @@
 	"short_name": "Jogo Rolezin",
 	"start_url": "index.html",
 	"display": "fullscreen",
-	"orientation": "portrait",
+	"orientation": "landscape",
 	"icons": [{
 		"src": "icon-16.png",
 		"sizes": "16x16",
